--- a/src/components/Square/Square.css
+++ b/src/components/Square/Square.css
@@ -1,7 +1,8 @@
 .squareBlock {
     width: 100px;
     height: 100px;
-    background-color: grey;
+    background-color: black;
+    font-size: 100px;
     margin: 3px;
     cursor: pointer;
 };
